syntax = "proto3";

package xsuportal.proto.services.contestant;
option go_package = "github.com/isucon/isucon10-final/benchmarker/proto/xsuportal/services/contestant";

import "xsuportal/resources/benchmark_result.proto";
import "xsuportal/resources/benchmark_job.proto";

message ListBenchmarkJobsRequest {}

message ListBenchmarkJobsResponse {
  repeated xsuportal.proto.resources.BenchmarkJob jobs = 1;
}

message EnqueueBenchmarkJobRequest {
  // target ContestantInstance id
  // int64 target_id = 1;
  string target_hostname = 10;
}

message EnqueueBenchmarkJobResponse {
  xsuportal.proto.resources.BenchmarkJob job = 1;
}

// Query parameter
message GetBenchmarkJobQuery { int64 id = 1; }

message GetBenchmarkJobResponse {
  xsuportal.proto.resources.BenchmarkJob job = 1;
}
